# pw-desktop

./: .envrc  .gitignore  LEGAL_NOTICE.md  README.md  flake.nix  package.json  pnpm-lock.yaml
src/: index.html  injection.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
