[package]
name = "physicswallah-desktop"
version = "1.0.2-beta"
description = "Unofficial Physics Wallah Desktop App"
authors = ["its-ag"]
license = "CC0 1.0 Universal"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.99"
serde = "1.0.166"
tauri = { version = "1.1", features = ["process-relaunch", "devtools"] }
tauri-plugin-window-state = "0.1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
# strip = true
